# push_swap

./: CMakeLists.txt  Makefile  benchmark.sh  push_swap.h
bonus/: Makefile  bonus_algos.c  bonus_args.c  bonus_check.c  bonus_main.c  bonus_push_utils.c  checker.h  push_swap.h
bonus/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
bonus/libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_lstnew.c  ft_unite.c  libft.h
bonus/sources/: algos.c  args.c  bonus_algos.c  bonus_args.c  bonus_check.c  bonus_main.c  bonus_push_utils.c  check.c  main.c  push_utils.c
libft/: Makefile  ft_atoi.c  ft_lstadd_back.c  ft_lstnew.c  libft.h  test.c
printf/: Makefile  ft_printf.h  main.c
printf/libft/: Makefile  ft_lstadd_front.c  ft_lstclear.c  ft_lstnew.c
printf/sources/: address.c  character_case.c  flags.c  flgs_works.c  ft_printf.c  int_case.c  percent.c  string_case.c  sxtn_case.c  works.c
sources/: algos.c  args.c  greed.c  main.c  push_utils.c  sort_a.c  stkb.c
sources/bra/: bra.c  bra_utils.c  do_the_action.c  get_acts.c  get_pos_grt.c  get_pos_ind.c  ind_deal.c  indexw.c  moves_to_a.c  sort_a.c
sources/greed/: greed.c  sort_a.c  stkb.c
